<resources>
    <string name="app_name">eMarket Admin</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_select">Select</string>
    <string name="text_loading">Loading…</string>
    <string name="text_please_wait">Please wait…</string>
    <string name="text_search_button">Search button</string>
    <string name="text_please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_last_week">Last week</string>
    <string name="text_sec_ago">sec ago</string>
    <string name="text_min_ago">min ago</string>
    <string name="text_day_ago">day ago</string>
    <string name="text_days_ago">days ago</string>
    <string name="text_search_something">Search for something!</string>
    <string name="curr_eur" translatable="false">€</string>
    <string name="text_options">Options</string>
    <string name="text_go_back">Go back!</string>
    <string name="text_search">Search</string>
    <string name="text_products">Products</string>
    <string name="text_out_of_stock">Out of Stock</string>
    <string name="text_available">Available</string>
    <string name="text_no_products">No products!</string>
    <string name="text_no_products_2">No products found in database.</string>
    <string name="text_no_description">No description.</string>
    <string name="text_product_added_successfully">%1$s has been added successfully!</string>
    <string name="text_product_updated_successfully">%1$s has been updated successfully!</string>
    <string name="edit_this_product">Edit This Product</string>
    <string name="delete_this_product">Delete This Product</string>
    <string name="text_add_new_product">Add a new product</string>
    <string name="text_add_new_product_2">Add a new product for sale!</string>
    <string name="add_product">Add Product</string>
    <string name="update_product">Update Product</string>
    <string name="update_a_product">Update a product</string>
    <string name="update_a_product_2">Update a existing product with new details!</string>
    <string name="text_orders">Orders</string>
    <string name="text_no_orders">No orders found!</string>
    <string name="text_no_orders_2">No orders found in database.</string>
    <string name="text_item_or_items"> item(s)</string>
    <string name="text_arriving">Arriving: </string>
    <string name="text_total">Total: </string>
    <string name="text_order_num_sign">Order #</string>
    <string name="text_items_orders">Items Ordered</string>
    <string name="text_address">Address</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_delivery_time">Delivery Time</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="text_order_status">Order Status</string>
    <string name="text_pending">Pending</string>
    <string name="text_processing">Processing</string>
    <string name="text_completed">Completed</string>
    <string name="text_client">Client</string>
    <string name="text_users">Users</string>
    <string name="text_none">None</string>
    <string name="text_edit">Edit</string>
    <string name="text_additional_notes">Additional Notes</string>
    <string name="text_user">User</string>
    <string name="text_no_users">No users!</string>
    <string name="text_no_users_2">No users found in database.</string>
    <string name="user_info">User Info</string>
    <string name="user_details">User details</string>
    <string name="text_profile">Profile</string>
    <string name="text_my_account">My Account</string>
    <string name="text_account_info">Account Info</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_date_registered">Date Registered</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_street_address">Street address</string>
    <string name="text_zip_code">Zip code</string>
    <string name="text_country">Country</string>
    <string name="text_street_number">Street Number</string>
    <string name="text_type">Type</string>
    <string name="text_house_">House</string>
    <string name="text_apartment">Apartment</string>
    <string name="text_other">Other</string>
    <string name="text_admin">Admin</string>
    <string name="text_profile_updated">Your profile has been updated successfully!</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_must_be_enabled">This must be enabled in order to receive push notifications!</string>
    <string name="notifications_enabled">Are Notifications Enabled?</string>
    <string name="is_profile_completed">Are Profile Details Completed?</string>
    <string name="role">Role</string>
    <string name="active_devices">Active Devices</string>
    <string name="text_welcome_back">Welcome Back 👋</string>
    <string name="text_sign_in_header">Sign-In</string>
    <string name="text_sign_in_header_2">Enter your email and password to continue to eMarket Admin app.</string>
    <string name="text_sign_in_alternatives">Or login with</string>
    <string name="input_text_hint_email">Your email address</string>
    <string name="input_text_hint_password">Your password</string>
    <string name="text_login">Login</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_authenticate">Authenticate</string>
    <string name="text_authenticate_2">To change your password you need to authenticate again.</string>
    <string name="text_forgot_password_question">Forgot password?</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="text_send">Send</string>
    <string name="text_password_reset_mail_sent">Email sent successfully to reset your password!</string>
    <string name="text_enter_email_address_to_send_reset_code">Enter email address to send reset code.</string>
    <string name="text_password_reset">Password Reset</string>
    <string name="text_congratulations">Congratulations!</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="text_product_deleted">Product has been deleted successfully!</string>
    <string name="text_image_selection_failed">Image selection Failed!</string>
    <string name="text_read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="text_error_empty_name">Please enter your full name.</string>
    <string name="text_error_empty_password">Please enter your password.</string>
    <string name="text_error_empty_email">Please enter your email.</string>
    <string name="text_error_empty_phone">Please enter your phone number.</string>
    <string name="text_error_empty_product_category">Please select a category for the product.</string>
    <string name="text_error_empty_product_description">Please enter details about the product.</string>
    <string name="text_error_empty_product_name">Please enter the name of the product.</string>
    <string name="text_error_empty_product_price">Please enter the price of the product in #.## format.</string>
    <string name="text_error_empty_product_stock">Please enter the available stock of the product.</string>
    <string name="text_error_user_not_admin">You must be an administrator to use this app!</string>
    <string name="text_an_error_has_occurred">Error has occurred!</string>
    <string name="text_an_error_has_occurred_2">An error has appeared when retrieving details from database! Please try again!</string>
    <string name="text_format_price" translatable="false">%1$s%2$,.2f</string>
    <string name="text_format_weight" translatable="false">%1$d %2$s</string>
    <string name="text_format_added_by_user">Added By: %1$s</string>
    <string name="text_format_last_modified_by_user">Last Modified By: %1$s</string>
    <string name="text_format_update">Update %1$s</string>
    <string name="text_format_phone">+%1$s %2$s</string>
    <string name="text_format_address">%1$s, %2$s</string>
    <string name="text_format_order_address">%1$s, %2$s,\n%3$s, %4$s,\n\n%5$s</string>
    <string name="text_format_user_details">%1$s\'s details</string>
    <string name="category">Category</string>
    <string name="text_category_vegetables">Vegetables</string>
    <string name="text_category_beverages">Beverages</string>
    <string name="text_category_chilled">Chilled</string>
    <string name="text_category_household">Household</string>
    <string name="text_category_homeware">Homeware</string>
    <string name="text_category_grocery">Grocery</string>
    <string name="text_category_fish">Fish</string>
    <string name="text_category_meat">Meat</string>
    <string name="text_category_frozen">Frozen</string>
    <string name="text_category_fruits">Fruits</string>
    <string name="text_category_liquor">Liquor</string>
    <string name="text_category_pharmacy">Pharmacy</string>
    <string name="input_text_hint_dash">-</string>
    <string name="input_text_hint_phone_number">Your mobile number</string>
    <string name="input_text_hint_full_name">Your full name</string>
    <string name="input_text_hint_category">Product category. Ex: Fruits</string>
    <string name="input_text_hint_product_name">Product name. Ex: Apple</string>
    <string name="input_text_hint_product_price">Product price. Ex: 5.30</string>
    <string name="input_text_hint_product_weight">Product weight. Ex: 2KG</string>
    <string name="input_text_hint_product_sale">Product sale. Ex: 0.5 = 50%</string>
    <string name="input_text_hint_product_stock">Product stock. Ex: 65</string>
    <string name="input_text_hint_description">Product details.</string>
    <string name="input_text_hint_sort_type">Order of sorting</string>
    <string name="text_sort">Sort</string>
    <string name="text_sort_results">Sort Results</string>
    <string-array name="text_array_sorting_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="text_name">Name</string>
    <string name="text_date_added">Date Added</string>
    <string name="text_category">Category</string>
    <string name="text_popularity">Popularity</string>
    <string name="text_price">Price</string>
    <string name="text_stock">Stock</string>
    <string name="text_sale">Sale</string>
    <string name="text_order_number">Order Number</string>
    <string name="text_order_date_created">Order Date Created</string>
    <string name="text_sub_total_amount">Sub Total Amount</string>
    <string name="text_user_id">User ID</string>
    <string name="text_profile_completed">Profile Completed</string>
    <string name="text_role">Role</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_phone_code">Phone Number Code</string>
    <string name="text_weight_unit_grams">Grams (G)</string>
    <string name="text_weight_unit_kg">Kilograms (KG)</string>
    <string name="text_weight_unit_pills">Pills</string>
    <string name="text_weight_unit_liters">Liters (Lt)</string>
    <string name="text_weight_unit_shortcut_grams">G</string>
    <string name="text_weight_unit_shortcut_kg">KG</string>
    <string name="text_weight_unit_shortcut_pills">Pills</string>
    <string name="text_weight_unit_shortcut_liters">Lt</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="warning">Warning!</string>
    <string name="warning_2">Are you sure that you want to delete this product? Once it\'s deleted the unique ID will be forever lost!</string>
    <string name="text_cd_tick_image">Tick image</string>
</resources>