<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@drawable/shape_container_dialog_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_snackbar_success_large_dismiss"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_dismiss"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_view_snackbar_success_large_context"
            app:layout_constraintTop_toBottomOf="@+id/text_view_snackbar_success_large_context" />

        <TextView
            android:id="@+id/text_view_snackbar_success_large_context"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/core_sans_cr_45_regular"
            android:text="@string/text_loading"
            android:textAlignment="textStart"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/text_font_size_header_16"
            app:layout_constraintEnd_toEndOf="@+id/text_view_snackbar_success_large_header"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_view_snackbar_success_large_header"
            app:layout_constraintTop_toBottomOf="@+id/text_view_snackbar_success_large_header" />

        <TextView
            android:id="@+id/text_view_snackbar_success_large_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/core_sans_cr_45_regular"
            android:text="@string/text_congratulations"
            android:textAlignment="textStart"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_size_header_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/image_view_icon_snackbar_success_large"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_icon_snackbar_success_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/svg_success"
            android:contentDescription="@string/text_cd_tick_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
