<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_container_dialog_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/button_snackbar_success_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/core_sans_cr_55_medium"
            android:gravity="start|center_vertical"
            android:text="@string/text_dismiss"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btn_font_size_small_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_view_snackbar_success_label_2"
            app:layout_constraintTop_toBottomOf="@+id/text_view_snackbar_success_label_2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_view_snackbar_success_label_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/core_sans_cr_45_regular"
            android:text="@string/text_congratulations"
            android:textAlignment="textStart"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_size_header_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/image_view_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_snackbar_success_label_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/core_sans_cr_45_regular"
            android:text="@string/text_loading"
            android:textAlignment="textStart"
            android:textColor="@color/colorText2"
            android:textSize="@dimen/text_font_size_header_16"
            app:layout_constraintEnd_toEndOf="@+id/text_view_snackbar_success_label_1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_view_snackbar_success_label_1"
            app:layout_constraintTop_toBottomOf="@+id/text_view_snackbar_success_label_1" />

        <ImageView
            android:id="@+id/image_view_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/svg_tick_check_circle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
